--- a/sass/ui/form/input-group/_core.scss
+++ b/sass/ui/form/input-group/_core.scss
@@ -8,6 +8,7 @@
 @import '../../../flexibility/placeholders';
 
 @import '../../../grid/variables';
+@import '../../../grid/mixins';
 @import '../../../grid/placeholders';
 
 @import '../variables';
