--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -146,7 +146,7 @@
 }
 
 
-@mixin cache($name) {
+@mixin keep($name) {
   @if not index($-CURLS-CACHE, $name) {
     $-CURLS-CACHE: append($-CURLS-CACHE, $name) !global;
     @content;
@@ -156,7 +156,7 @@
 
 @mixin import-once($name) {
   $name: --IMPORT--#{$name};
-  @include cache($name) {
+  @include keep($name) {
     @content;
   }
 }
