--- a/sass/grid/_placeholders.scss
+++ b/sass/grid/_placeholders.scss
@@ -1,8 +1,8 @@
 @include import-once('grid-placeholders') {
   %#{$grid-row-name} {
     @extend %#{$flex-name};
-    @include flex-wrap(wrap);
-    @include flex-direction(row);
+    @extend %#{$flex-name}--wrap;
+    @extend %#{$flex-name}--x;
     @include flex-basis(100%);
   }
 
@@ -11,141 +11,66 @@
     @extend %#{$flex-name};
     @extend %#{$flex-name}--fluid;
     @extend %#{$flex-name}--y-top;
-    @include flex-wrap(wrap);
-    @include flex-direction(row);
+    @extend %#{$flex-name}--wrap;
+    @extend %#{$flex-name}--x;
+    position: relative;
   }
 
-
-  $-REVERSED-KEYS: map-keys(map-reverse($grid-breakpoint));
-
-
-  %media-padding-gutters,
-  %media-gutters {
-    @each $size in $-REVERSED-KEYS {
-      @media #{map-get($grid-breakpoint, $size)} {
-        padding: map-get($grid-gutter, $size);
-      }
-    }
+  // Padding gutters */
+  $gutter-map: ();
+  @each $bp in $R-BREAKPOINT-KEYS {
+    $gutter-val: map-get($grid-gutter, $bp);
+    $gutter-map: map-merge($gutter-map, ($bp: $gutter-val / 2));
   }
 
-
-  %media-padding-gutters-x,
-  %media-gutters-x {
-    @each $size in $-REVERSED-KEYS {
-      @media #{map-get($grid-breakpoint, $size)} {
-        padding-left: map-get($grid-gutter, $size);
-        padding-right: map-get($grid-gutter, $size);
-      }
-    }
+  $gutter-map--2x: ();
+  @each $bp in $R-BREAKPOINT-KEYS {
+    $gutter-val: map-get($grid-gutter, $bp);
+    $gutter-map--2x: map-merge($gutter-map--2x, ($bp: $gutter-val));
   }
 
-
-  %media-padding-gutters-y,
-  %media-gutters-y {
-    @each $size in $-REVERSED-KEYS {
-      @media #{map-get($grid-breakpoint, $size)} {
-        padding-top: map-get($grid-gutter, $size);
-        padding-bottom: map-get($grid-gutter, $size);
-      }
-    }
-  }
-
-
-  %media-padding-gutters-half,
-  %media-gutters-half {
-    @each $size in $-REVERSED-KEYS {
-      @media #{map-get($grid-breakpoint, $size)} {
-        padding: round(map-get($grid-gutter, $size) / 2);
-      }
-    }
-  }
+  @include breakholder(gutters--l, (padding-left: $gutter-map));
+  @include breakholder(gutters--r, (padding-right: $gutter-map));
+  @include breakholder(gutters--t, (padding-top: $gutter-map));
+  @include breakholder(gutters--b, (padding-bottom: $gutter-map));
+  @include breakholder(gutters--x, (padding-left: $gutter-map,
+                                    padding-right: $gutter-map));
+  @include breakholder(gutters--y, (padding-top: $gutter-map,
+                                    padding-bottom: $gutter-map));
+  @include breakholder(gutters, (padding: $gutter-map));
+  @include breakholder(gutters--2l, (padding-left: $gutter-map--2x));
+  @include breakholder(gutters--2r, (padding-right: $gutter-map--2x));
+  @include breakholder(gutters--2t, (padding-top: $gutter-map--2x));
+  @include breakholder(gutters--2b, (padding-bottom: $gutter-map--2x));
+  @include breakholder(gutters--2x, (padding-left: $gutter-map--2x,
+                                    padding-right: $gutter-map--2x));
+  @include breakholder(gutters--2y, (padding-top: $gutter-map--2x,
+                                     padding-bottom: $gutter-map--2x));
+  @include breakholder(gutters--2, (padding: $gutter-map--2x));
 
 
-  %media-padding-gutters-half-x,
-  %media-gutters-half-x {
-    @each $size in $-REVERSED-KEYS {
-      @media #{map-get($grid-breakpoint, $size)} {
-        padding-left: round(map-get($grid-gutter, $size) / 2);
-        padding-right: round(map-get($grid-gutter, $size) / 2);
-      }
-    }
-  }
+  // Margin gutters */
+  @include breakholder(margin-gutters--l, (margin-left: $gutter-map));
+  @include breakholder(margin-gutters--r, (margin-right: $gutter-map));
+  @include breakholder(margin-gutters--t, (margin-top: $gutter-map));
+  @include breakholder(margin-gutters--b, (margin-bottom: $gutter-map));
+  @include breakholder(margin-gutters--x, (margin-left: $gutter-map,
+                                           margin-right: $gutter-map));
+  @include breakholder(margin-gutters--y, (margin-top: $gutter-map,
+                                           margin-bottom: $gutter-map));
+  @include breakholder(margin-gutters, (margin: $gutter-map));
+  @include breakholder(margin-gutters--2l, (margin-left: $gutter-map--2x));
+  @include breakholder(margin-gutters--2r, (margin-right: $gutter-map--2x));
+  @include breakholder(margin-gutters--2t, (margin-top: $gutter-map--2x));
+  @include breakholder(margin-gutters--2b, (margin-bottom: $gutter-map--2x));
+  @include breakholder(margin-gutters--2x, (margin-left: $gutter-map--2x,
+                                           margin-right: $gutter-map--2x));
+  @include breakholder(margin-gutters--2y, (margin-top: $gutter-map--2x,
+                                           margin-bottom: $gutter-map--2x));
+  @include breakholder(margin-gutters--2, (margin: $gutter-map--2x));
 
-
-  %media-padding-gutters-half-y,
-  %media-gutters-half-y {
-    @each $size in $-REVERSED-KEYS {
-      @media #{map-get($grid-breakpoint, $size)} {
-        padding-top: round(map-get($grid-gutter, $size) / 2);
-        padding-bottom: round(map-get($grid-gutter, $size) / 2);
-      }
-    }
-  }
-
-
-  %media-margin-gutters {
-    @each $size in $-REVERSED-KEYS {
-      @media #{map-get($grid-breakpoint, $size)} {
-        margin: map-get($grid-gutter, $size);
-      }
-    }
-  }
-
-
-  %media-margin-gutters-y {
-    @each $size in $-REVERSED-KEYS {
-      @media #{map-get($grid-breakpoint, $size)} {
-        margin-top: map-get($grid-gutter, $size);
-        margin-bottom: map-get($grid-gutter, $size);
-      }
-    }
-  }
-
-
-  %media-margin-gutters-x {
-    @each $size in $-REVERSED-KEYS {
-      @media #{map-get($grid-breakpoint, $size)} {
-        margin-left: map-get($grid-gutter, $size);
-        margin-right: map-get($grid-gutter, $size);
-      }
-    }
-  }
-
-
-  %media-margin-gutters-half {
-    @each $size in $-REVERSED-KEYS {
-      @media #{map-get($grid-breakpoint, $size)} {
-        margin: round(map-get($grid-gutter, $size) / 2);
-      }
-    }
-  }
-
-
-  %media-margin-gutters-half-y {
-    @each $size in $-REVERSED-KEYS {
-      @media #{map-get($grid-breakpoint, $size)} {
-        margin-top: round(map-get($grid-gutter, $size) / 2);
-        margin-bottom: round(map-get($grid-gutter, $size) / 2);
-      }
-    }
-  }
-
-
-  %media-margin-gutters-half-x {
-    @each $size in $-REVERSED-KEYS {
-      @media #{map-get($grid-breakpoint, $size)} {
-        margin-left: round(map-get($grid-gutter, $size) / 2);
-        margin-right: round(map-get($grid-gutter, $size) / 2);
-      }
-    }
-  }
-
-
-  @each $size in $-REVERSED-KEYS {
-    %hide--#{$size} {
-      @media #{map-get($grid-breakpoint, $size)} {
-        display: none !important;
-      }
-    }
+  // Hide selectors */
+  @include breakholder(hide) {
+    display: none !important;
   }
 }
